@startuml

class Juego {
  - listaJugadores: List<Jugador>
  - tablero: Tablero
  - indiceTurno: int
  - dado: Dado
  - cartasDesarrollo: List<CartaDesarrollo>
  - granCaballeria: GranCaballeria
  - granRutaComercial: GranRutaComercial
  - cartaComprada: CartaDesarrollo
  
  + construir(Construccion, EspacioConstruible): void
  + robarCartaDe(Jugador): void
  + moverLadron(Hexagono): void
  + comprarCartaDesarrollo(): void
  + ejecutarComercioPuerto(Vertice, List<Recurso>, Recurso): void
  + colocarPrimerPoblado(Vertice, Arista): void
  + colocarSegundoPoblado(Vertice, Arista): void
  + lanzarDados(): int
  + descartePorLadron(): void
  + ejecutarAccion(Accion): void
  + ejecutarComercioJugador(ComercioJugador, Jugador): void
  + producirRecursos(int): void
  + darRecursosIniciales(Vertice): void
  + jugadorActual(): Jugador
  + avanzarTurno(): void
  + retrocederTurno(): void
  + revisarGranCaballeria(Jugador): boolean
  + revisarGranRutaComercial(Jugador): boolean
  + entregarAJugador(Recurso): void
  + getJugadores(): List<Jugador>
  + getTablero(): Tablero
  + getDado(): Dado
  + getIndiceTurno(): int
  + getCartaComprada(): CartaDesarrollo
}

class Dado {
  - random: Random
  - valor1: int
  - valor2: int
  
  + lanzarDados(): int
  + obtenerDado1(): int
  + obtenerDado2(): int
}

class Observable {
  - observadores: List<Observador>
  
  + agregarObservador(Observador): void
  + eliminarObservador(Observador): void
  + notificarObservadores(): void
}

interface Accion {
  + ejecutar(): void
}

class AccionConstruir {
  - construccion: Construccion
  - espacio: EspacioConstruible
  - juego: Juego
  
  + ejecutar(): void
}

class AccionFinalizarTurno {
  - juego: Juego
  
  + ejecutar(): void
}

class AccionMoverLadron {
  - juego: Juego
  - nuevoLugar: Hexagono
  
  + ejecutar(): void
}

class AccionRobarCarta {
  - juego: Juego
  - victima: Jugador
  
  + ejecutar(): void
}

class AccionComprarCartaDesarrollo {
  - juego: Juego
  
  + ejecutar(): void
}

class AccionPrimeraColocacion {
  - juego: Juego
  - vertice: Vertice
  - arista: Arista
  
  + ejecutar(): void
}

class AccionSegundaColocacion {
  - juego: Juego
  - vertice: Vertice
  - arista: Arista
  
  + ejecutar(): void
}

Dado --|> Observable

Juego --> Dado
Juego --> "2..4" Jugador
Juego --> Tablero
Juego --> "0..*" CartaDesarrollo
Juego --> GranCaballeria
Juego --> GranRutaComercial


Accion <|.. AccionConstruir
Accion <|.. AccionFinalizarTurno
Accion <|.. AccionMoverLadron
Accion <|.. AccionRobarCarta
Accion <|.. AccionComprarCartaDesarrollo
Accion <|.. AccionPrimeraColocacion
Accion <|.. AccionSegundaColocacion

AccionConstruir --> Juego
AccionFinalizarTurno --> Juego
AccionMoverLadron --> Juego
AccionRobarCarta --> Juego
AccionComprarCartaDesarrollo --> Juego
AccionPrimeraColocacion --> Juego
AccionSegundaColocacion --> Juego

@enduml